# nalu

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  components.json  design-qa.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.js  vitest.config.js
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION.md  POSTMORTEM-multi-webview-audio.md  PRD-本地助手软件基座.md  TECH_STACK.md
e2e/: app.spec.ts
src/: App.vue  app.css  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  alarm.rs  clipboard.rs  database.rs  mod.rs  mysql.rs  mysql_users.rs  notes.rs  pomodoro.rs  schedule.rs  tasks.rs
src-tauri/src/db/: database.rs  mod.rs
src/lib/: types.ts
src/lib/components/: AiChatWidget.vue  AlertModal.vue  AppLayout.vue  ClipboardPopup.vue  CommandPalette.vue  Sidebar.vue
src/lib/components/pages/: AiPage.vue  AlarmPage.vue  ClipboardPage.vue  DashboardPage.vue  MysqlPage.vue  NotesPage.vue  PomodoroPage.vue  SchedulePage.vue  SettingsPage.vue  TasksPage.vue
src/lib/components/ui/button/: Button.vue
src/lib/components/ui/dialog/: DialogContent.vue  DialogDescription.vue  DialogFooter.vue  DialogHeader.vue  DialogOverlay.vue  DialogScrollContent.vue  DialogTitle.vue
src/lib/components/ui/input/: Input.vue
src/lib/components/ui/tabs/: Tabs.vue  TabsContent.vue  TabsList.vue  TabsTrigger.vue
src/lib/composables/: useAiRefresh.ts  useClipboardMonitor.ts
src/lib/i18n/: en.ts  index.ts  zh.ts
src/lib/stores/: alertStore.test.ts  alertStore.ts  clipboardStore.ts  settingsStore.ts
src/lib/utils/: alertSound.test.ts  alertSound.ts  markdown.ts  notifications.test.ts  notifications.ts  theme.ts
